Client, Server v0.1. Separated projects for TCPClient and TCPServer executables and a networking library netlib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ cmake_minimum_required (VERSION 3.8)
 project ("Networking")
 
 # Include sub-projects.
+option(NETLIB_EXTERNAL "Don't add netlib subdirectory inside nested projects" ON)
+add_subdirectory ("netlib")
 add_subdirectory ("Test")
 add_subdirectory ("TCPClient")
 add_subdirectory ("TCPServer")
-
