--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,15 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("Networking")
 
-set(CMAKE_CXX_STANDARD 20)
+if(MSVC)
+	# fix __cplusplus macro for MSVC
+	add_compile_options(
+		"/Zc:__cplusplus"
+		"/std:c++latest"
+	)
+else()
+	set(CMAKE_CXX_STANDARD 20)
+endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 
