--- a/TCPServer/CMakeLists.txt
+++ b/TCPServer/CMakeLists.txt
@@ -5,11 +5,34 @@ cmake_minimum_required (VERSION 3.8)
 
 project(TCPServer)
 
-set(CMAKE_CXX_STANDARD 20)
+if(MSVC)
+	# fix __cplusplus macro for MSVC
+	add_compile_options(
+		"/Zc:__cplusplus"
+		"/std:c++latest"
+	)
+else()
+	set(CMAKE_CXX_STANDARD 20)
+endif()
 
 if (LOG_ON)
 	add_compile_definitions("LOG_ON")
+	message("TCPServer: LOG_ON is defined")
+else()
+	message("TCPServer: LOG_ON is not defined")
 endif ()
+if (LOG_LEVEL_VERBOSE)
+	add_compile_definitions("LOG_LEVEL_VERBOSE")
+	message("TCPServer: LOG_LEVEL_VERBOSE is defined")
+else()
+	message("TCPServer: LOG_LEVEL_VERBOSE is not defined")
+endif ()
+if (LOG_LEVEL_DEBUG)
+	add_compile_definitions("LOG_LEVEL_DEBUG")
+	message("TCPServer: LOG_LEVEL_DEBUG is defined")
+else()
+	message("TCPServer: LOG_LEVEL_DEBUG is not defined")
+endif()
 
 set(ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/..")
 set(NETLIB_DIR "${ROOT_DIR}/netlib")
