--- a/netlib/CMakeLists.txt
+++ b/netlib/CMakeLists.txt
@@ -5,22 +5,49 @@ cmake_minimum_required (VERSION 3.8)
 
 project (netlib)
 
-set(CMAKE_CXX_STANDARD 20)
+if(MSVC)
+	# fix __cplusplus macro for MSVC
+	add_compile_options(
+		"/Zc:__cplusplus"
+		"/std:c++latest"
+	)
+else()
+	set(CMAKE_CXX_STANDARD 20)
+endif()
 
-if (LOG_ON)
-	add_compile_definitions("LOG_ON")
-endif ()
+# if (LOG_ON)
+# 	message("netlib: Log is ON")
+# 	add_compile_definitions("LOG_ON")
+# else()
+# 	message("netlib: Log is OFF")
+# endif ()
+# if (LOG_LEVEL_VERBOSE)
+# 	message("netlib: LOG_LEVEL_VERBOSE is ON")
+# 	add_compile_definitions("LOG_LEVEL_VERBOSE")
+# else()
+# 	message("netlib: LOG_LEVEL_VERBOSE is OFF")
+# endif()
 
 if ("${ASIO_PATH}" STREQUAL "")
 	set (ASIO_PATH $ENV{netlib_asio_path})
 endif()
 
-message("Asio path: '${ASIO_PATH}'")
+message("netlib: Asio path: '${ASIO_PATH}'")
+
+if ("${DEPS}" STREQUAL "")
+	message("netlib: WARNING: DEPS is not specified. Take the default value")
+	set(DEPS "$ENV{networking_deps}")
+else()
+	message("netlib: DEPS: ${DEPS}")
+endif()
+
+set(UTILS_DIR "${DEPS}/Utils")
 
 set(NETLIB_INCLUDES 
 	${ASIO_PATH}
 	${PROJECT_SOURCE_DIR}
 	${PROJECT_SOURCE_DIR}/common
+	${UTILS_DIR}/include
 )
 
 set(NETLIB_INCLUDES ${NETLIB_INCLUDES} PARENT_SCOPE)
