Update deps configuration.

--- a/netlib/CMakeLists.txt
+++ b/netlib/CMakeLists.txt
@@ -28,18 +28,33 @@ endif()
 # 	message("netlib: LOG_LEVEL_VERBOSE is OFF")
 # endif()
 
-if ("${ASIO_PATH}" STREQUAL "")
-	set (ASIO_PATH $ENV{netlib_asio_path})
+if ("${LIBS}" STREQUAL "")
+	set (LIBS $ENV{netlib_libs})
 endif()
-
+if ("${LIBS}" STREQUAL "")
+	set (LIBS $ENV{build_libs})
+endif()
+if ("${ASIO_PATH}" STREQUAL "")
+	set (ASIO_PATH ${LIBS}/asio-1.22.1/include)
+endif()
 message("netlib: Asio path: '${ASIO_PATH}'")
 
+# set deps variables
+set(netlib_DEPS "$ENV{netlib_deps}")
+set(netlib_DEPS "${netlib_DEPS}" PARENT_SCOPE)
+if ("${netlib_DEPS}" STREQUAL "")
+	set(DEPS "$ENV{build_deps}")
+endif()
 if ("${DEPS}" STREQUAL "")
-	message("netlib: WARNING: DEPS is not specified. Take the default value")
-	set(DEPS "$ENV{networking_deps}")
+	set(DEPS ${netlib_DEPS})
+endif()
+if ("${DEPS}" STREQUAL "")
+	message(SEND_ERROR "netlib: ERROR: DEPS is not specified. Take the default value")
+	set(DEPS ${CMAKE_CURRENT_SOURCE_DIR}/dependencies)
 else()
 	message("netlib: DEPS: ${DEPS}")
 endif()
+set(DEPS ${DEPS} PARENT_SCOPE)
 
 set(UTILS_DIR "${DEPS}/Utils")
 
