Added http library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,14 @@ if(MSVC)
 	)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 else()
-	set(CMAKE_CXX_STANDARD 20)
+	set(CMAKE_CXX_STANDARD 17)
 endif()
 
 # Include sub-projects.
 option(NETLIB_EXTERNAL "Don't add netlib subdirectory inside nested projects" ON)
-add_subdirectory ("netlib")
-add_subdirectory ("Test")
-add_subdirectory ("TCPClient")
-add_subdirectory ("TCPServer")
+add_subdirectory("netlib")
+set(HTTP_STANDALONE OFF)
+add_subdirectory("http")
+add_subdirectory("Test")
+add_subdirectory("TCPClient")
+add_subdirectory("TCPServer")
