Use LOG indication messages during the CMake configuration.

--- a/http/CMakeLists.txt
+++ b/http/CMakeLists.txt
@@ -15,18 +15,18 @@ else()
 	set(CMAKE_CXX_STANDARD 17)
 endif()
 
-# if (LOG_ON)
-# 	message("http: Log is ON")
-# 	add_compile_definitions("LOG_ON")
-# else()
-# 	message("http: Log is OFF")
-# endif ()
-# if (LOG_LEVEL_VERBOSE)
-# 	message("http: LOG_LEVEL_VERBOSE is ON")
-# 	add_compile_definitions("LOG_LEVEL_VERBOSE")
-# else()
-# 	message("http: LOG_LEVEL_VERBOSE is OFF")
-# endif()
+if (LOG_ON)
+	message("http: Log is ON")
+	add_compile_definitions("LOG_ON")
+else()
+	message("http: Log is OFF")
+endif ()
+if (LOG_LEVEL_VERBOSE)
+	message("http: LOG_LEVEL_VERBOSE is ON")
+	add_compile_definitions("LOG_LEVEL_VERBOSE")
+else()
+	message("http: LOG_LEVEL_VERBOSE is OFF")
+endif()
 
 # set build folder name variable for any dependency
 if (CMAKE_CXX_COMPILER EQUAL "g++")
