--- a/netlib/CMakeLists.txt
+++ b/netlib/CMakeLists.txt
@@ -15,18 +15,18 @@ else()
 	set(CMAKE_CXX_STANDARD 17)
 endif()
 
-# if (LOG_ON)
-# 	message("netlib: Log is ON")
-# 	add_compile_definitions("LOG_ON")
-# else()
-# 	message("netlib: Log is OFF")
-# endif ()
-# if (LOG_LEVEL_VERBOSE)
-# 	message("netlib: LOG_LEVEL_VERBOSE is ON")
-# 	add_compile_definitions("LOG_LEVEL_VERBOSE")
-# else()
-# 	message("netlib: LOG_LEVEL_VERBOSE is OFF")
-# endif()
+if (LOG_ON)
+	message("netlib: Log is ON")
+	add_compile_definitions("LOG_ON")
+else()
+	message("netlib: Log is OFF")
+endif ()
+if (LOG_LEVEL_VERBOSE)
+	message("netlib: LOG_LEVEL_VERBOSE is ON")
+	add_compile_definitions("LOG_LEVEL_VERBOSE")
+else()
+	message("netlib: LOG_LEVEL_VERBOSE is OFF")
+endif()
 
 # set deps variables
 set(netlib_DEPS "$ENV{netlib_deps}")
