Extensible http_client module created. Authorization, downloading, uploading, version control prior the overwriting a downloaded version are abstracted in downloader, uploader, utils/networking/downloader_with_auth.h; uploader_with_auth.h; downloader_with_version_control.h modules.

--- a/http/CMakeLists.txt
+++ b/http/CMakeLists.txt
@@ -75,6 +75,6 @@ file(GLOB SRC CONFIGURE_DEPENDS "src/*")
 file(GLOB HEADERS CONFIGURE_DEPENDS "*.h")
 
 # if (HTTP)
-	add_library(http ${SRC} ${HEADERS})
+	add_library(http ${SRC})
 	target_link_libraries(http PRIVATE netlib)
 # endif()
