--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,11 @@ if(MSVC)
 	# fix __cplusplus macro for MSVC
 	add_compile_options(
 		"/Zc:__cplusplus"
-		"/std:c++latest"
+		# "/std:c++latest"
 	)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-else()
-	set(CMAKE_CXX_STANDARD 17)
 endif()
+set(CMAKE_CXX_STANDARD 17)
 
 # Include sub-projects.
 option(NETLIB_EXTERNAL "Don't add netlib subdirectory inside nested projects" ON)
