--- a/netlib/CMakeLists.txt
+++ b/netlib/CMakeLists.txt
@@ -1,74 +1,50 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
-# and include sub-projects here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.15)
 
-project (netlib)
+project(netlib C CXX)
 
-if(MSVC)
-	# fix __cplusplus macro for MSVC
-	add_compile_options(
-		"/Zc:__cplusplus"
-		"/std:c++latest"
+macro(setup_module)
+	module_message("Setting up module: ${MODULE_NAME}")
+
+	# Boost dependency
+	set(BOOST_PATH ${DEPS}/boost_1_81_0)
+	module_message("Boost path: '${BOOST_PATH}'")
+
+	# OpenSSL dependency
+	set(OPENSSL_PATH ${DEPS}/openssl-3.1.4)
+	module_message("OpenSSL path: '${OPENSSL_PATH}'")
+
+	# Utils dependency
+	set(UTILS_DIR "${DEPS}/Utils")
+
+	# Certify dependency
+	set(CERTIFY_DIR "${DEPS}/certify")
+
+	module_add_includes( 
+		${BOOST_PATH}
+		${BOOST_PATH}/boost
+		${OPENSSL_PATH}/include
+		${PROJECT_SOURCE_DIR}
+		${PROJECT_SOURCE_DIR}/common
+		${UTILS_DIR}/include
+		${CERTIFY_DIR}/include
 	)
-else()
-	set(CMAKE_CXX_STANDARD 17)
-endif()
 
-if (LOG_ON)
-	message("netlib: Log is ON")
-	add_compile_definitions("LOG_ON")
-else()
-	message("netlib: Log is OFF")
-endif ()
-if (LOG_LEVEL_VERBOSE)
-	message("netlib: LOG_LEVEL_VERBOSE is ON")
-	add_compile_definitions("LOG_LEVEL_VERBOSE")
-else()
-	message("netlib: LOG_LEVEL_VERBOSE is OFF")
-endif()
+	# Group sources for IDE
+	set_headers()
+	GROUP_SRC("${HEADERS}" "${CMAKE_CURRENT_SOURCE_DIR}/include")
+	add_src(${HEADERS}) # Add headers as sources to make them visible in IDE
 
-# set deps variables
-set(netlib_DEPS "$ENV{netlib_deps}")
-set(netlib_DEPS "${netlib_DEPS}" PARENT_SCOPE)
-if ("${netlib_DEPS}" STREQUAL "")
-	file(TO_CMAKE_PATH "$ENV{build_deps}" DEPS)
-endif()
-if ("${DEPS}" STREQUAL "")
-	set(DEPS ${netlib_DEPS})
-endif()
-if ("${DEPS}" STREQUAL "")
-	message(SEND_ERROR "netlib: ERROR: DEPS is not specified. Take the default value")
-	set(DEPS ${CMAKE_CURRENT_SOURCE_DIR}/dependencies)
-else()
-	message("netlib: DEPS: ${DEPS}")
-endif()
-set(DEPS ${DEPS} PARENT_SCOPE)
+	# add library
+	module_add_library()
 
-set(ASIO_PATH ${DEPS}/asio-1.28.0)
-message("netlib: Asio path: '${ASIO_PATH}'")
+	target_link_directories(netlib PUBLIC ${OPENSSL_PATH})
+	target_link_libraries(netlib PUBLIC libssl_static libcrypto_static)
+	module_message("CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
+	if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+		target_link_libraries(netlib PUBLIC crypt32)
+	endif()
+endmacro()
 
-set(OPENSSL_PATH ${DEPS}/openssl-3.1.4)
-message("netlib: OpenSSL path: '${OPENSSL_PATH}'")
-
-set(UTILS_DIR "${DEPS}/Utils")
-
-set(NETLIB_INCLUDES 
-	${ASIO_PATH}/include
-	${OPENSSL_PATH}/include
-	${PROJECT_SOURCE_DIR}
-	${PROJECT_SOURCE_DIR}/common
-	${UTILS_DIR}/include
-)
-
-set(NETLIB_INCLUDES ${NETLIB_INCLUDES} PARENT_SCOPE)
-
-include_directories("${NETLIB_INCLUDES}")
-
-file(GLOB_RECURSE SRC CONFIGURE_DEPENDS "tcp/src/*")
-message("netlib: SRC: ${SRC}")
-file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS "tcp/*" "common/*")
-
-add_library(netlib STATIC ${SRC} ${HEADERS})
-target_link_directories(netlib PUBLIC ${OPENSSL_PATH})
-target_link_libraries(netlib PUBLIC libssl_static libcrypto_static)
+include(cmake_modules/modules.cmake)
+modules_include_all(cmake_modules)
+setup_module_project()
