--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,7 +91,8 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "*.sh": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "cassert": "cpp"
     },
     "cmake.useCMakePresets": "auto",
     "cmake.environment": {
