url_uploader with compression using zlib.

--- a/HTTPClient/CMakeLists.txt
+++ b/HTTPClient/CMakeLists.txt
@@ -13,6 +13,8 @@ macro(setup_module)
 	# DMBCore dependency
 	add_dependency_module(${DEPS}/DataModelBuilder/Core DMBCore)
 
+	set(UTILS_DIR ${DEPS}/Utils)
+
 	module_add_includes(
 		${PARENT_DIR}/include
 	)
@@ -20,12 +22,17 @@ macro(setup_module)
 	set_headers()
 	GROUP_SRC("${HEADERS}" "include")
 	# Add headers as sources to make them visible in IDE
-	add_src(${HEADERS})
+	add_src(
+		${HEADERS}
+		${UTILS_DIR}/src/networking/uploader_with_auth.cpp
+	)
 	file(GLOB_RECURSE PARENT_DIR_HEADERS "${PARENT_DIR}/include/*")
 	module_message("PARENT_DIR_HEADERS: ${PARENT_DIR_HEADERS}")
 	add_src(${PARENT_DIR_HEADERS})
 	# add executable
 	module_add_executable()
+	configure_file(test.txt ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
+	configure_file(test2.txt ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 endmacro()
 
 include(cmake_modules/modules.cmake)
